# yaaml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_OPTIMIZATION_SUMMARY.md  LICENSE  MANIFEST.in  MODERNIZATION_HANDOVER.md  README.md  mkdocs.yml  pyproject.toml  setup.py  yaaml_build_method.txt
.github/workflows/: ci-cd.yml  ci.yml  release.yml
docs/: development.md  status.md  testing.md
scripts/: README.md  check_project.py  check_version.py  fix_linting.py  release.sh  run_tests.py  setup_api_tokens.sh  setup_dev.py
src/: __init__.py  encoding.py  feature_selection.py  helper_funcs.py  hyperas.py  main.py  miss_imputation.py  model_interpreter.py  nlp.py  sampling.py
src/algos/: kmodes.py  logit.py  multiclass.py  one_class.py  randomforest.py  xgboost.py
src/modules/: feature_engineering.py  inference.py  modelling.py  preprocessing.py  text_features.py
tests/: conftest.py  test_encoding.py  test_encoding_new.py  test_feature_selection.py  test_helper_funcs.py  test_main.py  test_miss_imputation.py  test_module_integration.py  test_python312_features.py  test_realistic_automl.py  test_sampling.py
yaaml/: Untitled.ipynb  __init__.py  eda_functions.py  encoding.py  feature_engineering.py  feature_selection.py  helper_funcs.py  import_modules.py  main.py  miss_imputation.py  native_algorithms.py  nlp.py  sampling.py
yaaml/algos/: lightgbm.py  multiclass.py  outlier_multiclass.py  randomforest.py  svc.py  xgboost_class.py
yaaml/modules/: misc.py
yaaml/to_be_added_later/: classification_algos.py  eda_functions.py  eda_nb.ipynb  excel_pw_read.py  fb_fasttext.ipynb  imputer.py  interpreter.ipynb  multicolumnenc.py  nlp_test.txt  parameter_tuning_plots.ipynb
